force-app/main/default/objects/Commitment__c/Commitment__c.object-meta.xml
<CustomObject>
    <label>Commitment</label>
    <nameField>
        <label>Commitment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <searchStatus>Inactive</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>