force-app/main/default/objects/Commitment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>