force-app/main/default/objects/Commitment__c/fields/CommittedAmount__c.field-meta.xml
<CustomField>
    <fullName>CommittedAmount__c</fullName>
    <label>CommittedAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>