force-app/main/default/objects/Commitment__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>